<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/login_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_code_title"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:layout_marginTop="48dp"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code_description"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:layout_marginBottom="24dp"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/etCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_edit_phone"
        android:inputType="number"
        android:maxLines="1"
        android:singleLine="true"
        android:padding="8dp"
        android:gravity="center"
        android:textSize="40sp"
        android:imeOptions="actionNext"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"/>

    <TextView
        android:id="@+id/tvConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:gravity="center"
        android:text="@string/enter_code_confirm_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:textStyle="bold"
        style="?android:textAppearanceSmall"
        android:textSize="22sp"
        android:clickable="true"/>

    <TextView
        android:id="@+id/tvResend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:gravity="center"
        android:text="@string/enter_code_resend_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:textStyle="bold"
        style="?android:textAppearanceSmall"
        android:textSize="22sp"
        android:clickable="true"/>

</LinearLayout>