<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/loginContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_background"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="48dp"
            android:text="@string/enter_number_title"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:background="@drawable/shape_edit_phone"
            android:hint="@string/enter_number_number_hint"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLength="16"
            android:maxLines="1"
            android:padding="8dp"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tvSend"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/enter_number_send_text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>