<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="4dp"
    android:paddingRight="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="@string/add_table_dialog_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/score_name"
                android:inputType="number"
                android:maxLength="2" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/container_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="18dp"
                    android:gravity="center"
                    android:text="@string/tags"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:id="@+id/buttons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnCreate"
                        style="@style/Widget.AppCompat.ButtonBar.AlertDialog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:text="@string/add_table_dialog_create_button"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btnCancel"
                        style="@style/Widget.AppCompat.ButtonBar.AlertDialog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabAddTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                app:srcCompat="@drawable/ic_add_white_24dp" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>